# Analizator_Auto

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/analizator_auto/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: best.param  yolov8.param
app/src/main/cpp/: CMakeLists.txt  yolov8_jni.cpp
app/src/main/java/com/example/analizator_auto/: Constance.kt  InputActivity.kt  MainActivity.kt  ResultActivity.kt  Yolov8.kt
app/src/main/res/layout/: activity_input.xml  activity_main.xml  activity_result.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/analizator_auto/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
